--- a/pages/Order/Order.wxml
+++ b/pages/Order/Order.wxml
@@ -25,9 +25,9 @@
         <view class="order-footer-address">地址:{{item.user_address}}</view>
         <!-- <view wx:if="{{item.pay_status === 0}}" id='{{item.orderId}}' class="order-footer-goToComment" bindtap='lookComment'>
         查看评论</view> -->
-        <view wx:if="{{item.pay_status === 1 && item.commentStatus === 1}}" id='{{item.orderId}}' class="order-footer-goToComment" bindtap='lookComment'>
+        <view wx:if="{{item.pay_status === 1 && item.comment_status === 1}}" id='{{item.order_id}}' class="order-footer-goToComment" bindtap='lookComment'>
         我的评论</view>
-        <view wx:if="{{item.pay_status === 1 && item.commentStatus === 0}}" id='{{item.orderId}}' class="order-footer-goToComment" bindtap='goToComment'>
+        <view wx:if="{{item.pay_status === 1 && item.comment_status === 0}}" id='{{item.order_id}}' class="order-footer-goToComment" bindtap='goToComment'>
         去评论</view>
         
         <view class="order-footer-orderAgain" bindtap='orderAgain'>回到菜单</view>
