--- a/pages/Search/Search.wxml
+++ b/pages/Search/Search.wxml
@@ -11,11 +11,11 @@
 <!-- 异步刷新展示菜品信息 -->
 <!-- 提示菜品信息文本框 -->
 <cover-view
-  id='{{i.productId}}'
+  id='{{i.product_id}}'
   bindtouchstart="bindSearch"      
   class="text_box" 
   wx:for="{{productJson}}" 
   wx:key="Search" 
   wx:for-item="i">
-    {{i.productName}}
+    {{i.product_name}}
 </cover-view>
